# airflow-on-k8s

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
airflow/dags/: mlops_iris_dag.py
airflow_dags/: airflow_on_k8s_dag.py
conf/: logging.yml
conf/base/: catalog.yml  mlflow.yml
conf/local/: mlflow.yml
dags/: mlops_iris_dag.py
docs/source/: conf.py  index.rst
k8s/: pvc-kedro-data.yaml
kedro_project/conf/base/: catalog.yml  mlflow.yml
kedro_project/conf/local/: credentials.yml
kedro_project/src/kedro_project/: hooks.py
kedro_project/src/kedro_project/pipelines/training/: nodes.py
scripts/: register_model.py
src/airflow_on_k8s/: __init__.py  __main__.py  settings.py
src/airflow_on_k8s/pipelines/data_engineering/: README.md
src/airflow_on_k8s/pipelines/data_science/: README.md  nodes.py  pipeline.py
src/kedro_project/: pipeline_registry.py
src/kedro_project/pipelines/training/: pipeline.py
train/: Dockerfile  train_iris.py
