[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro-project"
version = "0.1.0"
description = "MLOps Kedro project for Iris classification"
authors = [
    {name = "MLOps Team", email = "mlops@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kedro>=1.0.0",
    "kedro-mlflow>=1.0.2",
    "kedro-datasets>=1.0.0",
    "mlflow>=2.7.0,<3.0.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.3.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0"
]

[tool.kedro]
package_name = "kedro_project"
project_name = "Kedro Project"
kedro_init_version = "1.0.0"
source_dir = "kedro_project/src"
tools = ["kedro-mlflow"]
example_pipeline = "iris_classification"